[GB.WEB.FORM] * NEW: WebComboBox: Activate is a new event that is raised when the user hits the ENTER key in an editable combo-box. * NEW: WebComboBox: PlaceHolder is a new property that allows to define the placeholder text displayed inside the editable combo-box when it is void. * OPT: WebComboBox: Optimize the Text property refresh. * OPT: WebControl: Optimize the Visible property refresh. * BUG: WebForm.AddJavascriptFile() now works correctly. * NEW: WebTable: ShowHeader is a new property tha t allows to hide the table header. * NEW: WebTextArea: PlaceHolder is a new property that allows to define the placeholder text displayed inside the text area when it is void. * NEW: WebTextBox: Activate is a new event that is raised when the user hits the ENTER key in the text box. * NEW: WebTextBox: PlaceHolder is a new property that allows to define the placeholder text displayed inside the text box when it is void. * OPT: WebTextBox: Optimize the Text property refresh.
git-svn-id: svn://localhost/gambas/trunk@7816 867c0c6c-44f3-4631-809d-bfa615b0a4ec

--- a/comp/src/gb.web.form/style.css
+++ b/comp/src/gb.web.form/style.css
@@ -32,6 +32,10 @@ P:first-child,UL:first-child,OL:first-child {
   margin-top: 0;
 }*/
 
+.gw-hidden {
+  display: none !important;
+}
+
 .gw-button {
   padding: 0;
   font: inherit;
@@ -558,7 +562,7 @@ P:first-child,UL:first-child,OL:first-child {
 }*/
 
 .gw-table > DIV > TABLE > TBODY > TR:nth-child(even) {
-  background-color: #F0F0F0;
+  background-color: #F8F8F8;
 }
 
 .gw-table-more {
